sandbox-codebase/objects/Study__c/Study__c.object-meta.xml
<CustomObject>
    <label>Study</label>
    <nameField>
        <label>Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>