sandbox-codebase/objects/Study__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <formula>IF(Address_Confirmation_Required__c ,&quot;Confirm Address&quot;,
			IF(Packaging_Required__c, &quot;Ship&quot;,
						IF(Instructional_Call_Required__c, &quot;Make Instructional Call&quot;,
								IF( Send_Study_Reminder_Text_Required__c, &quot;Send Study Reminder Text&quot;,

IF(Study_Follow_up_Required__c, &quot;Follow-up on Study Completion&quot;,

IF(Send_PSat_Survey_Required__c, &quot;Send PSat Survey&quot;,
												IF(Processing_Required__c, &quot;Process Return&quot;,
															IF(Huxley_Data_Review_Required__c, &quot;Review Data&quot;, &quot;&quot;
																		)
															)
											)
								)
					)
		)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Required</label>
    <type>Text</type>
</CustomField>