sandbox-codebase/objects/Study__c/fields/Address_Confirmation_Required__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmation_Required__c</fullName>
    <formula>AND(ISBLANK(Address_Confirmed_Date__c),
OR(ISBLANK(Last_Address_Confirmation_Attempt__c),
Last_Address_Confirmation_Attempt__c + 0.5 &lt; NOW()
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Confirmation Required</label>
    <type>Checkbox</type>
</CustomField>