sandbox-codebase/objects/Study__c/fields/Address_Confirmation_Time__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmation_Time__c</fullName>
    <formula>IF(ISBLANK(Address_Confirmed_Date__c), NOW() - CreatedDate, Address_Confirmed_Date__c - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Confirmation Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>