sandbox-codebase/objects/Study__c/fields/Aircall_Log__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircall Log</label>
    <referenceTo>aircall__Aircall_AI__c</referenceTo>
    <relationshipLabel>Studies</relationshipLabel>
    <relationshipName>Studies</relationshipName>
    <type>Lookup</type>
</CustomField>