sandbox-codebase/objects/Study__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>The Date that the device was delivered to the Patient. Used in Mogli Templates as a Merge field. https://basecamp.com/2583453/projects/19794483/todos/515688158</description>
    <formula>CASE(
MONTH( DATEVALUE( Date_Received_by_Patient__c ) ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;Unknown&quot;
)
&amp; &quot; &quot; &amp;
TEXT( DAY( DATEVALUE( Date_Received_by_Patient__c ) ) )</formula>
    <inlineHelpText>The Date that the device was delivered to the Patient. Used in Mogli Templates as a Merge field. https://basecamp.com/2583453/projects/19794483/todos/515688158</inlineHelpText>
    <label>Arrival Date</label>
    <type>Text</type>
</CustomField>