sandbox-codebase/objects/Study__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Asset_Location__c</field>
            <operation>equals</operation>
            <value>Huxley</value>
        </filterItems>
        <filterItems>
            <field>Asset.Status</field>
            <operation>notEqual</operation>
            <value>Quarentined</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Studies</relationshipLabel>
    <relationshipName>Studies1</relationshipName>
    <type>Lookup</type>
</CustomField>