sandbox-codebase/objects/Study__c/fields/Cellular_Upload_Complete__c.field-meta.xml
<CustomField>
    <fullName>Cellular_Upload_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data was successfully uploaded via cellular</description>
    <inlineHelpText>Data was successfully uploaded via cellular</inlineHelpText>
    <label>Cellular Upload Complete</label>
    <type>Checkbox</type>
</CustomField>