sandbox-codebase/objects/Study__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Studies (Contract)</relationshipLabel>
    <relationshipName>Studies1</relationshipName>
    <type>Lookup</type>
</CustomField>