sandbox-codebase/objects/Study__c/fields/Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price__c</fullName>
    <formula>Contract__r.Start_Price__c</formula>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>