sandbox-codebase/objects/Study__c/fields/Data_Review_Required_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Data_Review_Required_Time_Hours__c</fullName>
    <description>Represents the amount of time data review has been required</description>
    <formula>IF(ISBLANK(Study_Success_Decision_Date__c), NOW() - Data_Upload_Date__c, Study_Success_Decision_Date__c - Data_Upload_Date__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Review Required Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>