sandbox-codebase/objects/Study__c/fields/Data_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload_Date__c</fullName>
    <label>Data Upload Date</label>
    <type>DateTime</type>
</CustomField>