sandbox-codebase/objects/Study__c/fields/Date_Received_by_Huxley__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_by_Huxley__c</fullName>
    <label>Date Received by Huxley</label>
    <type>DateTime</type>
</CustomField>