sandbox-codebase/objects/Study__c/fields/Date_Received_by_Patient__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_by_Patient__c</fullName>
    <label>Date Received by Patient</label>
    <type>DateTime</type>
</CustomField>