sandbox-codebase/objects/Study__c/fields/Date_Return_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Return_Initiated__c</fullName>
    <label>Date Return Initiated</label>
    <type>DateTime</type>
</CustomField>