sandbox-codebase/objects/Study__c/fields/Date_Shipped_to_Patient__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped_to_Patient__c</fullName>
    <label>Date Shipped to Patient</label>
    <type>DateTime</type>
</CustomField>