sandbox-codebase/objects/Study__c/fields/Default_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Default_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Gateway</label>
    <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
    <relationshipLabel>Studies</relationshipLabel>
    <relationshipName>Studies</relationshipName>
    <type>Lookup</type>
</CustomField>