sandbox-codebase/objects/Study__c/fields/Delay_Ship_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Delay_Ship_Date_To__c</fullName>
    <description>Fill in this field if during the address confirmation call, the patient said they cannot complete the test immediately and we should delay shipment</description>
    <label>Delay Ship Date To</label>
    <type>DateTime</type>
</CustomField>