sandbox-codebase/objects/Study__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the study is a demo</description>
    <inlineHelpText>Check this box if the study is a demo</inlineHelpText>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>