sandbox-codebase/objects/Study__c/fields/Expected_Delivery_Date_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date_Outbound__c</fullName>
    <description>Expected delivery date for the inbound shipment for the study</description>
    <label>Expected Delivery Date (Outbound)</label>
    <type>Date</type>
</CustomField>