sandbox-codebase/objects/Study__c/fields/Expected_Delivery_Date_Return__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date_Return__c</fullName>
    <description>Expected delivery date for the return shipment for the study</description>
    <label>Expected Delivery Date (Return)</label>
    <type>Date</type>
</CustomField>