sandbox-codebase/objects/Study__c/fields/Expected_Study_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Study_Date__c</fullName>
    <label>Expected Study Date</label>
    <type>DateTime</type>
</CustomField>