sandbox-codebase/objects/Study__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Device Malfunction</fullName>
            </value>
            <value>
                <fullName>Packaging/ Device Damage</fullName>
            </value>
            <value>
                <fullName>Patient Skin Irritation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>