sandbox-codebase/objects/Study__c/fields/Huxley_Data_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Huxley_Data_Review_Required__c</fullName>
    <formula>AND(ISPICKVAL(Status__c, &quot;Processing&quot;), NOT(ISBLANK(Data_Upload_Date__c)), ISBLANK(Study_Success_Decision_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Huxley Data Review Required</label>
    <type>Checkbox</type>
</CustomField>