sandbox-codebase/objects/Study__c/fields/Instructional_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Call_Date__c</fullName>
    <label>Instructional Call Date</label>
    <type>DateTime</type>
</CustomField>