sandbox-codebase/objects/Study__c/fields/Instructional_Call_Required__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Call_Required__c</fullName>
    <formula>AND(ISPICKVAL(Status__c, &quot;With Patient&quot;),
ISBLANK(Instructional_Call_Date__c),
OR(ISBLANK(Last_Instructional_Call_Attempt__c), Last_Instructional_Call_Attempt__c + 0.5 &lt; NOW()
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructional Call Required</label>
    <type>Checkbox</type>
</CustomField>