sandbox-codebase/objects/Study__c/fields/Instructional_Call_Required_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Instructional_Call_Required_Time_Hours__c</fullName>
    <description>Represents the amount of time an instructional call has been required. 

Note: 1 is subtracted in the logic because the Instructional Call Action is not required until 1 day after the Last Instructional Call Attempt</description>
    <formula>IF(AND(Instructional_Call_Required__c, ISBLANK(Last_Instructional_Call_Attempt__c)), NOW() -  Date_Received_by_Patient__c, 
IF(AND(Instructional_Call_Required__c, NOT(ISBLANK(Last_Instructional_Call_Attempt__c))), NOW() - Last_Instructional_Call_Attempt__c - 1, NULL))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructional Call Required Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>