sandbox-codebase/objects/Study__c/fields/Interpreting_Physician__c.field-meta.xml
<CustomField>
    <fullName>Interpreting_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interpreting Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Studies Interpreted</relationshipLabel>
    <relationshipName>StudiesInterpreted</relationshipName>
    <type>Lookup</type>
</CustomField>