sandbox-codebase/objects/Study__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <description>Used in reporting to segment/group metrics by completed/closed studies compared to open.</description>
    <formula>IF(ISPICKVAL(Status__c,&quot;Complete&quot;), TRUE, FALSE)</formula>
    <label>IsCompleted</label>
    <type>Checkbox</type>
</CustomField>