sandbox-codebase/objects/Study__c/fields/Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Kit_ID__c</fullName>
    <label>Kit ID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>