sandbox-codebase/objects/Study__c/fields/Last_Address_Confirmation_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Address_Confirmation_Attempt__c</fullName>
    <label>Last Address Confirmation Attempt</label>
    <type>DateTime</type>
</CustomField>