sandbox-codebase/objects/Study__c/fields/Last_Instructional_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Instructional_Call_Attempt__c</fullName>
    <label>Last Instructional Call Attempt</label>
    <type>DateTime</type>
</CustomField>