sandbox-codebase/objects/Study__c/fields/Last_Study_Follow_up_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Study_Follow_up_Attempt__c</fullName>
    <label>Last Study Follow-up Attempt</label>
    <type>DateTime</type>
</CustomField>