sandbox-codebase/objects/Study__c/fields/Mogli_Number_from_Person__c.field-meta.xml
<CustomField>
    <fullName>Mogli_Number_from_Person__c</fullName>
    <formula>Patient__r.PersonContact.Mogli_SMS__Mogli_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mogli Number from Person</label>
    <type>Text</type>
</CustomField>