sandbox-codebase/objects/Study__c/fields/Mogli_Opt_Out_from_Person__c.field-meta.xml
<CustomField>
    <fullName>Mogli_Opt_Out_from_Person__c</fullName>
    <formula>Patient__r.PersonContact.Mogli_SMS__Mogli_Opt_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mogli Opt Out from Person</label>
    <type>Checkbox</type>
</CustomField>