sandbox-codebase/objects/Study__c/fields/Notes_for_Quality_Team__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Quality_Team__c</fullName>
    <description>Leave a note to specify why this study is being checked as &quot;Quality Review Required&quot;</description>
    <inlineHelpText>Leave a note to specify why this study is being checked as &quot;Quality Review Required&quot;</inlineHelpText>
    <label>Notes for Quality Team</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>