sandbox-codebase/objects/Study__c/fields/Notes_from_Quality_Team__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Quality_Team__c</fullName>
    <description>Notes that the quality team would like to add about their review</description>
    <inlineHelpText>Notes that the quality team would like to add about their review</inlineHelpText>
    <label>Notes from Quality Team</label>
    <type>TextArea</type>
</CustomField>