sandbox-codebase/objects/Study__c/fields/Opt_Out_Follow_Up_Series__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Follow_Up_Series__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://basecamp.com/2583453/projects/19794483/todos/515712884</description>
    <inlineHelpText>Used to stop automated Follow-Up Series SMS from being sent to the recipient/patient</inlineHelpText>
    <label>Opt Out: Follow Up Series</label>
    <type>Checkbox</type>
</CustomField>