sandbox-codebase/objects/Study__c/fields/Opted_In_For_Texting__c.field-meta.xml
<CustomField>
    <fullName>Opted_In_For_Texting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the patient has opted in for texting</description>
    <inlineHelpText>Check this box if the patient has opted in for texting</inlineHelpText>
    <label>Opted In For Texting</label>
    <type>Checkbox</type>
</CustomField>