sandbox-codebase/objects/Study__c/fields/Order_Fulfillment_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfillment_Time_Days__c</fullName>
    <description>Represents the amount of time it takes to fulfill an order after it is placed</description>
    <formula>IF(ISBLANK(Packaged_Date__c), NULL, 
IF(NOT(ISBLANK(Delay_Ship_Date_To__c)),  Packaged_Date__c - Delay_Ship_Date_To__c, Packaged_Date__c - CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Fulfillment Time (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>