sandbox-codebase/objects/Study__c/fields/Ordering_Physician__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordering Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Studies Ordered</relationshipLabel>
    <relationshipName>OrderedStudies</relationshipName>
    <type>Lookup</type>
</CustomField>