sandbox-codebase/objects/Study__c/fields/Outbound_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Tracking__c</fullName>
    <description>This is the tracking number for the outbound shipment for the study</description>
    <inlineHelpText>This is the tracking number for the outbound shipment for the study</inlineHelpText>
    <label>Outbound Tracking</label>
    <length>25</length>
    <type>Text</type>
</CustomField>