sandbox-codebase/objects/Study__c/fields/Outbound_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Tracking_Link__c</fullName>
    <formula>IF(
    ISBLANK(Outbound_Tracking__c),
    &quot;&quot;,
    HYPERLINK(
        &quot;https://tools.usps.com/go/TrackConfirmAction?tLabels=&quot; &amp; Outbound_Tracking__c,
        Outbound_Tracking__c,
        &quot;_blank&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound Tracking Link</label>
    <type>Text</type>
</CustomField>