sandbox-codebase/objects/Study__c/fields/Outbound_Tracking_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Tracking_Stage__c</fullName>
    <description>Tracking stage of the outbound shipment for the study</description>
    <label>Outbound Tracking Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>