sandbox-codebase/objects/Study__c/fields/Packaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Packaged_Date__c</fullName>
    <label>Packaged Date</label>
    <type>DateTime</type>
</CustomField>