sandbox-codebase/objects/Study__c/fields/Packaging_Required__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Required__c</fullName>
    <formula>AND(
ISPICKVAL(Status__c, &quot;New&quot;),
NOT(ISBLANK(Address_Confirmed_Date__c)),
ISBLANK( Asset__c ),
ISBLANK(Packaged_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packaging Required</label>
    <type>Checkbox</type>
</CustomField>