sandbox-codebase/objects/Study__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Studies (Parent Account)</relationshipLabel>
    <relationshipName>Studies1</relationshipName>
    <type>Lookup</type>
</CustomField>