sandbox-codebase/objects/Study__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Studies (Patient)</relationshipLabel>
    <relationshipName>Studies_Patient</relationshipName>
    <type>Lookup</type>
</CustomField>