sandbox-codebase/objects/Study__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <description>Used in Mogli SMS merge field for more convenient access.</description>
    <formula>Patient__r.FirstName</formula>
    <label>Patient First Name</label>
    <type>Text</type>
</CustomField>