sandbox-codebase/objects/Study__c/fields/Patient_Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>Patient_Hold_Time__c</fullName>
    <description>Represents how long the patient had the pod in possession. Date return initiated should be populated by Zenkraft shipment automation when the return shipment is scanned and in transit.</description>
    <formula>IF(OR(ISBLANK(Date_Received_by_Patient__c), ISBLANK(Date_Return_Initiated__c)), NULL,
          Date_Return_Initiated__c - Date_Received_by_Patient__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Hold Time (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>