sandbox-codebase/objects/Study__c/fields/Patient_No_Automated_SMS__c.field-meta.xml
<CustomField>
    <fullName>Patient_No_Automated_SMS__c</fullName>
    <description>Used in flow automation to prevent automated text messages to the patient. https://basecamp.com/2583453/projects/19794483/todos/514550599</description>
    <formula>INCLUDES(Patient__r.Non_Traditional_Protocol__c, &apos;Do Not Send Automated SMS&apos;)</formula>
    <label>Patient: No Automated SMS</label>
    <type>Checkbox</type>
</CustomField>