sandbox-codebase/objects/Study__c/fields/Patient_Order__c.field-meta.xml
<CustomField>
    <fullName>Patient_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Order</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Studies</relationshipLabel>
    <relationshipName>Studies1</relationshipName>
    <type>Lookup</type>
</CustomField>