sandbox-codebase/objects/Study__c/fields/Patient_Satisfaction_Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Satisfaction_Survey_Notes__c</fullName>
    <description>Note any additional information the patient provides in response to the survey</description>
    <inlineHelpText>Note any additional information the patient provides in response to the survey</inlineHelpText>
    <label>Patient Satisfaction Survey Notes</label>
    <type>TextArea</type>
</CustomField>