sandbox-codebase/objects/Study__c/fields/Patient_Satisfaction_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Patient_Satisfaction_Survey_Response__c</fullName>
    <description>Enter the patient&apos;s answer to the Customer Satisfaction Survey (needs to be a number 1-5)</description>
    <inlineHelpText>Enter the patient&apos;s answer to the Customer Satisfaction Survey (needs to be a number 1-5)</inlineHelpText>
    <label>Patient Satisfaction Survey Response</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>