sandbox-codebase/objects/Study__c/fields/Patient_Satisfaction_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Patient_Satisfaction_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box once the Patient Satisfaction Survey has been sent</description>
    <inlineHelpText>Check this box once the Patient Satisfaction Survey has been sent</inlineHelpText>
    <label>Patient Satisfaction Survey Sent</label>
    <type>Checkbox</type>
</CustomField>