sandbox-codebase/objects/Study__c/fields/Pod_aging_with_patient__c.field-meta.xml
<CustomField>
    <fullName>Pod_aging_with_patient__c</fullName>
    <description>Time from Date received by patient to now</description>
    <formula>IF(
    ISBLANK(Date_Return_Initiated__c),
    NOW() - Date_Received_by_Patient__c,
    Date_Return_Initiated__c - Date_Received_by_Patient__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pod aging (with patient)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>