sandbox-codebase/objects/Study__c/fields/Pod_not_returned__c.field-meta.xml
<CustomField>
    <fullName>Pod_not_returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check here if the pod is lost or was not returned by the patient</description>
    <inlineHelpText>Check here if the pod is lost or was not returned by the patient</inlineHelpText>
    <label>Pod not returned</label>
    <type>Checkbox</type>
</CustomField>