sandbox-codebase/objects/Study__c/fields/Pod_Turnaround_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Pod_Turnaround_Time_Days__c</fullName>
    <description>Represents the time between the pod being shipped to the patient and being returned back and placed into inventory</description>
    <formula>IF(OR(ISBLANK(Data_Upload_Date__c), ISBLANK(Packaged_Date__c)), NULL,  Date_Received_by_Huxley__c  - Packaged_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pod Turnaround Time (Days)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>