sandbox-codebase/objects/Study__c/fields/Processing_Required__c.field-meta.xml
<CustomField>
    <fullName>Processing_Required__c</fullName>
    <formula>AND(ISPICKVAL(Status__c, &quot;Processing&quot;), ISBLANK( Data_Upload_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Required</label>
    <type>Checkbox</type>
</CustomField>