sandbox-codebase/objects/Study__c/fields/Processing_Required_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Processing_Required_Time_Hours__c</fullName>
    <description>Represents the amount of time processing has been required</description>
    <formula>IF(ISBLANK(Data_Upload_Date__c), NOW() - Date_Received_by_Huxley__c, Data_Upload_Date__c - Date_Received_by_Huxley__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Required Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>