sandbox-codebase/objects/Study__c/fields/Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. The Provider Account must not be a Person.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Studies (Provider Account)</relationshipLabel>
    <relationshipName>Studies</relationshipName>
    <type>Lookup</type>
</CustomField>