sandbox-codebase/objects/Study__c/fields/Provider_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account_Name__c</fullName>
    <description>Used in Mogli SMS automation and templates for easier access to merge field.</description>
    <formula>Provider_Account__r.Name</formula>
    <inlineHelpText>Used in Mogli SMS automation and templates for easier access to merge field.</inlineHelpText>
    <label>Provider Account Name</label>
    <type>Text</type>
</CustomField>