sandbox-codebase/objects/Study__c/fields/Quality_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Quality_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quality representative can check this once they have completed their review</description>
    <inlineHelpText>Quality representative can check this once they have completed their review</inlineHelpText>
    <label>Quality Review Complete</label>
    <type>Checkbox</type>
</CustomField>