sandbox-codebase/objects/Study__c/fields/Quality_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Quality_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to route this study to quality for review</description>
    <inlineHelpText>Check this box if any feedback given by the patient may require a review by quality</inlineHelpText>
    <label>Quality Review Required</label>
    <type>Checkbox</type>
</CustomField>