sandbox-codebase/objects/Study__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Reference number for investigation</description>
    <inlineHelpText>Reference number for investigation</inlineHelpText>
    <label>Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>