sandbox-codebase/objects/Study__c/fields/Return_Instruction_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Instruction_Date__c</fullName>
    <description>Used in SMS Mogli flow scheduled path ((Study) Mogli SMS Send Study Night Reminder &amp; Return Instructions) to time the SMS Message to provide information about returning the device to Huxley Medical 1 day after the Study&apos;s Expected Study Date (datetime). https://basecamp.com/2583453/projects/19794483/todos/515687396</description>
    <formula>DATETIMEVALUE( TEXT( DATEVALUE(Expected_Study_Date__c) + 1 ) &amp; &quot; 14:00:00&quot; )
/*NOW()*/
/*comments are used for testing this time-based flow in order to demonstrate &apos;real-time&apos; during a demo without having to wait a full day*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in SMS Mogli flow scheduled path to time the SMS Message to provide information about returning the device to Huxley Medical 1 day after the Study&apos;s Expected Study Date (datetime)</inlineHelpText>
    <label>Return Instruction Date</label>
    <type>DateTime</type>
</CustomField>