sandbox-codebase/objects/Study__c/fields/Return_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking__c</fullName>
    <description>Tracking number for the return shipment for the study</description>
    <label>Return Tracking</label>
    <length>25</length>
    <type>Text</type>
</CustomField>