sandbox-codebase/objects/Study__c/fields/Return_Tracking_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Carrier__c</fullName>
    <description>If Return_Tracking starts with 9400, USPS. If something else, UPS. Else Blank, then return blank. https://basecamp.com/2583453/projects/19794483/todos/515660831#comment_969026254</description>
    <formula>IF(
NOT(ISBLANK(Return_Tracking__c)) &amp;&amp;
LEFT(Return_Tracking__c , 4) =&apos;9400&apos;,
&apos;USPS&apos;,
IF(NOT(ISBLANK(Return_Tracking__c)) &amp;&amp;
LEFT(Return_Tracking__c , 2) =&apos;1Z&apos;, &apos;UPS&apos;,&apos;&apos;)
)</formula>
    <inlineHelpText>Determines is Outbound Carrier is USPS or UPS</inlineHelpText>
    <label>Return Tracking Carrier</label>
    <type>Text</type>
</CustomField>