sandbox-codebase/objects/Study__c/fields/Return_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Link__c</fullName>
    <formula>IF(
    ISBLANK(Return_Tracking__c),
    &quot;&quot;,
    HYPERLINK(
        &quot;https://tools.usps.com/go/TrackConfirmAction?tLabels=&quot; &amp; Return_Tracking__c,
        Return_Tracking__c,
        &quot;_blank&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Tracking Link</label>
    <type>Text</type>
</CustomField>