sandbox-codebase/objects/Study__c/fields/Return_Tracking_Stage__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Stage__c</fullName>
    <description>Tracking stage for the return shipment for the study</description>
    <label>Return Tracking Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>